--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <link rel="shortcut icon" href="img/favicon.ico">
+  <meta name="description" content="Resume">
+  <meta name="author" content="862333513">
 
-  <title>John Doe - Business Administration</title>
+  <title>Abelardo Santiago Luis - Chemistry</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Abelardo Santiago Luis</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/abelardosantiagoluis.jpg" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,26 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Abelardo Santiago Luis
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">Chemistry📚</div>
+        <p class="lead mb-4">Abelardo Santiago Luis is currently studying to obtain a Bachelor's Degree in Chemsitry as a senior at the University of California Riverside. He is conjointly working per-diem at Providence Saint John's Healthcenter as a Medical Transporter/Lift Aide.<br><br>
 
-        Enter bio here<br><br>
+        Abelardo strives to improve in efficiency and is a quick visual learner. He works well in teams but prefers to work alone. When performing a specific task if challenges occurs, he remains calm and collected in order to achieve a proficeint outcome.Especiialy when assigned tasks are unknown, Abelardo strives to understand and accomplish assigned tasks effeciently and appropriately. Not only learning but understanding his mistakes is what makes him incredibly adaptive to any situations Abelardo is placed in. His creativity allows him the opportunity to efficiently and productively accomplish tasks.<br><br>
 
-        Enter bio here
+        Abelardo's postive and objective attitude inspires those around to not only pursue but to achieve greatenes. He is inspired daily by his wife who is an entertainment lawyer for Disney.
         </p>
         <div class="social-icons">
           <a target="_blank" id="socialicon-1" href="https://linkedin.com">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com">
+          <a target="_blank" id="socialicon-2" href="https://github.com/asant228">
             <i class="fab fa-github"></i>
           </a>
           <a target="_blank" id="socialicon-3" href="https://twitter.com">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="socialicon-4" href="mailto:asant228@ucr.edu">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,48 +92,48 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
+            <h3 class="mb-0">Medical Transporter/Lift Aide</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://www.providence.org/locations/socal/saint-johns-health-center">Providence Saint John's Healthcenter</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Basic Life Support Certification<br> 
+              • Safe Patient Care and Handling Certification<br>
+              • Experience with CPR, Management, and recruitment<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2019 - Present</span>
+            <span class="text-primary">May 2019 - Present</span>
           </div>
         </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Whole Foods</a></div>
+            <h3 class="mb-0">Enviormental Services</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Crothell</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Contained and prevented the spread of bacterial and fungal infections from infected patient rooms.<br>
+              • Experience with waxing floors, UV disinfection, <br>
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">March 2017 - March 2019</span>
+            <span class="text-primary">January 2019 - May 2019</span>
           </div>
         </div>
 
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">Sales Associat/Key Holder</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://Payless.com">Payless Shoe Source</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Supervised and Administered proper opening/closing procedures<br>
+            • Coached and educated incoming associates<br>
+            • Coordinated and approved daily cash bank deposits<br>
+            • Establish fresh marketing collateral across the shop.<br>
 
           </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">January 2011 - January 2016</span>
+            <span class="text-primary"> October 2015</span> - December 2018</span>
           </div>
         </div>
 
@@ -148,37 +148,14 @@
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="education">
       <div class="w-100">
         <h2 class="mb-5">Education</h2>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
-          </div>
-        </div>
-
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
+            <div class="subheading mb-3">Chemistry</div>
+            <div>Pure Chemsitry</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">August 2012 - May 2016</span>
+            <span class="text-primary">August 2022 - May 2024</span>
           </div>
         </div>
 
@@ -191,7 +168,10 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="img/me.jpg" width="500px">
+            <img src="img/flask.jpg" width="500px"><br>
+    <img src="img/ladder.jpg" width="500px">
+    <img src="img/dish.jpg" width="500px"><br>
         </center>
       </div>
     </section>
@@ -199,7 +179,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Abelardo Santiago Luis</center><br>
   </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
